--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>C3 &mdash; Autenticazione</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/2.0.3/pure-min.css" integrity="sha512-FEioxlObRXIskNAQ1/L0byx0SEkfAY+5fO024p9kGEfUQnACGRfCG5Af4bp/7sPNSzKbMtvmcJOWZC7fPX1/FA==" crossorigin="anonymous" />
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             display: flex;
+            flex-flow: column nowrap;
             justify-content: center;
+            align-items: center;
+            padding: 0 15vw;
+        }
+
+        h2, h3 {
+            margin: 0 0 .5rem;
+        }
+
+        form {
+            display: flex;
+            flex-flow: column nowrap;
+            margin: .5rem;
+        }
+
+        input, select {
+            margin-bottom: .6rem;
+        }
+
+        .selector {
+            display: flex;
+            flex-wrap: nowrap;
+        }
+
+        select {
+            flex-grow: 1;
+            margin-left: .5em;
+        }
+
+        .error {
+            color: red;
         }
     </style>
 </head>
 <body>
-    <form class="pure-form pure-form-aligned">
-        <fieldset>
-            <div class="pure-control-group">
-                <label for="tipo-utente">Tipo Utente:</label>
-                <select id="tipo-utente">
-                    <option>Commerciante</option>
-                    <option>Cliente</option>
-                    <option>Corriere</option>
-                    <option>Amministratore</option>
-                </select>
-            </div>
+    <h2>C3</h2>
+    <h3>Autenticazione</h3>
+    <form action="/do-auth" method="post">
+        <label for="email">Email</label>
+        <input id="email" name="email" type="text" placeholder="esempio@example.com">
 
-            <div class="pure-control-group">
-                <label for="email">Email:</label>
-                <input type="text" name="email" id="email">
-            </div>
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password">
 
-            <div class="pure-control-group">
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password">
-            </div>
+        <div class="selector">
+            <label for="tipo">Ruolo</label>
+            <select id="tipo" name="tipoUtente">
+                <option value="cliente">Cliente</option>
+                <option value="corriere">Corriere</option>
+                <option value="commerciante">Commerciante</option>
+            </select>
+        </div>
 
-            <div class="pure-control-group">
-                <button type="submit" class="pure-button pure-button-primary">Accedi</button>
-            </div>
-        </fieldset>
+        <input type="submit" value="Accedi">
     </form>
+    <p th:text="${error}" class="error"></p>
 </body>
 </html>
