--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -2,7 +2,7 @@
 <html lang="it" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>C3 &mdash; Autenticazione</title>
+    <title>Autenticazione</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         html, body {
@@ -51,7 +51,7 @@
 <body>
     <h2>C3</h2>
     <h3>Autenticazione</h3>
-    <form action="/do-auth" method="post">
+    <form action="/auth" method="post">
         <label for="email">Email</label>
         <input id="email" name="email" type="text" placeholder="esempio@example.com">
 
