--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -69,6 +69,7 @@
 
         <input type="submit" value="Accedi">
     </form>
+    <a href="/registrazione">Registrati</a>
     <p th:text="${error}" class="error"></p>
 </body>
 </html>
