--- a/src/main/resources/templates/not-found.html
+++ b/src/main/resources/templates/not-found.html
@@ -5,6 +5,6 @@
     <title>Not found</title>
 </head>
 <body>
-    <p>La cosa che hai richiesto non è stata trovata nel server</p>
+    <p>La risorsa richiesta non è stata trovata nel server</p>
 </body>
 </html>
