--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -69,7 +69,7 @@
 
         <input type="submit" value="Accedi">
     </form>
-    <a href="/registrazione">Registrati</a>
+    <p>Non hai un account? <a href="/registrazione">Registrati</a></p>
     <p th:text="${error}" class="error"></p>
 </body>
 </html>
