--- a/src/main/resources/templates/commerciante/home.html
+++ b/src/main/resources/templates/commerciante/home.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h3>Commerciante [<span th:text="${emailCommerciante}"></span>]</h3>
+    <h3>Commerciante [<span th:text="${emailCommerciante}"></span>] &mdash; Home</h3>
 
     <h4>Punti vendita</h4>
     <div class="card-container">
@@ -56,9 +56,9 @@
         </thead>
         <tbody>
             <tr th:each="ordine : ${ordiniInAttesa}">
-                <td th:text="${ordine.nomeCliente}"></td>
-                <td th:text="${ordine.emailCliente}"></td>
-                <td th:text="${ordine.numeroProdotti}"></td>
+                <td th:text="${ordine.cliente.nome} + ' ' + ${ordine.cliente.cognome}"></td>
+                <td th:text="${ordine.cliente.email}"></td>
+                <td th:text="${ordine.prodotti.size()}"></td>
                 <td>
                     <a th:href="@{'/commerciante/ordine'(id=${ordine.id})}">Vedi ordine</a>
                 </td>
