--- a/src/main/resources/templates/commerciante/ordine.html
+++ b/src/main/resources/templates/commerciante/ordine.html
@@ -42,6 +42,7 @@
             <td><em th:text="${ordine.getPrice()}"></em></td>
         </tr>
     </table>
+    <!-- FIXME this form is completely wrong -->
     <form th:if="${ordine.stato.name() == 'IN_ATTESA'}"
           action="ordine"
           method="get">
