implementati i casi d'uso commerciante:
visualizza offerte
aggiungi offerta
elimina offerta
elimina offerta a tempo

(aggiue conferme eliminazione su altri casi d'uso)

--- a/src/main/resources/templates/commerciante/aggiungiProdotto.html
+++ b/src/main/resources/templates/commerciante/aggiungiProdotto.html
@@ -18,6 +18,9 @@
     </style>
 </head>
 <body>
+    <a href="/commerciante">Home</a> /
+    <a th:href="@{'/commerciante/puntoVendita'(id=${puntoVendita.id})}">Punto vendita</a>
+
     <h1>Aggiungi prodotto</h1>
     <p>Aggiungi nel punto vendita: <th:block th:text="${puntoVendita.nome}"/></p>
     <form action="/commerciante/puntoVendita/aggiungiProdotto" method="post">
