implementati visualizza/accetta/rifiuta ordine

--- a/src/main/resources/templates/commerciante/home.html
+++ b/src/main/resources/templates/commerciante/home.html
@@ -45,6 +45,7 @@
         </div>
     </div>
     <h4>Ordini in attesa</h4>
+    <a th:href="@{'/commerciante/ordini'}">Visualizza tutti gli ordini</a>
     <table>
         <thead>
             <tr>
