implementati casi d'uso gestore

--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -69,7 +69,8 @@
 
         <input type="submit" value="Accedi">
     </form>
-    <p>Non hai un account? <a href="/registrazione">Registrati</a></p>
+    <p>Non hai un account? <a href="/registra">Registrati</a></p>
+    <p><a href="/authAdmin">Accesso gestori</a></p>
     <p th:text="${error}" class="error"></p>
 </body>
 </html>
