--- a/src/main/resources/templates/commerciante/aggiungiOfferta.html
+++ b/src/main/resources/templates/commerciante/aggiungiOfferta.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8">
     <title>Aggiungi offerta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        form {
-            display: flex;
-            flex-flow: column nowrap;
-            align-items: flex-start;
-            margin: .5rem;
-        }
-
-        form input {
-            margin: .25rem;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <a href="/commerciante">Home</a> /
