--- a/src/main/resources/templates/gestore/home.html
+++ b/src/main/resources/templates/gestore/home.html
@@ -4,24 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amministrazione</title>
-    <style>
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .card {
-            min-width: 10em;
-            margin: .8em;
-        }
-        .card-text {
-            margin: .4em;
-        }
-        .card-details {
-            font-size: .8em;
-            font-family: sans-serif;
-            margin: .4em;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>Gestore applicazione</h1>
